2014-10-02  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (adjust_decode_mode_spec_buffer): Use 'int' instead of
	'ssize_t'.  Suggested by Paul Eggert <eggert@cs.ucla.edu>.

2014-10-02  Jan Djärv  <jan.h.d@swipnet.se>

	* xfaces.c (Finternal_set_lisp_face_attribute): Don't try to
	make a font_object from a tty frame (Bug#18573).
	(Finternal_set_lisp_face_attribute): Add FIXME comment.

2014-10-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* alloc.c (mark_overlay): Assume that overlay boundaries are
	always markers.  Add comment.
	* lread.c (read_internal_start): Use convenient validate_subarray.
	Adjust docstring.
	(Fread_from_string): Adjust docstring.

2014-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h: Fix up compilation for USE_STACK_LISP_OBJECTS=false.

	* nsselect.m (ns-own-selection-internal, ns-disown-selection-internal):
	Rename from the "x-" prefix.

2014-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xselect.c (selection-converter-alist): Fix docstring.

2014-10-01  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (sys_spawnve): Avoid modification of the CMDNAME
	argument passed by the caller, when we mirror all slashes into
	backslashes.

2014-10-01  Dmitry Antipov  <dmantipov@yandex.ru>

	* gtkutil.c (xg_set_toolkit_horizontal_scroll_bar_thumb):
	Resurrect old code and fix compilation with GTK < 2.13.6.

2014-10-01  Paul Eggert  <eggert@cs.ucla.edu>

	Use AUTO_CONS instead of SCOPED_CONS, etc.
	* frame.h (AUTO_FRAME_ARG): Rename from FRAME_PARAMETER.
	* lisp.h (AUTO_CONS): Rename from scoped_cons.
	(AUTO_LIST1): Rename from scoped_list1.
	(AUTO_LIST2): Rename from scoped_list2.
	(AUTO_LIST3): Rename from scoped_list3.
	(AUTO_LIST4): Rename from scoped_list4.
	(AUTO_STRING): Rename from SCOPED_STRING.
	* frame.h (AUTO_FRAME_ARG):
	* lisp.h (AUTO_CONS, AUTO_LIST1, AUTO_LIST2, AUTO_LIST3)
	(AUTO_LIST4, AUTO_STRING):
	Prepend a new argument 'name'.
	Declare a variable instead of yielding a value.
	All uses changed.